--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "moment": "^2.29.4",
     "socket.io": "^4.5.4",
     "supervisor": "^0.12.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
   }
 }
